# cmake-wxWidgets-template

./: CMakeLists.txt
.github/workflows/: cmake.yml
